# bundler

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  config.test.toml  config.toml
.github/workflows/: build.yaml  ci.yaml
cache/: solidity-files-cache.json
crates/bunder/: Cargo.toml
crates/bunder/src/rpc/: server.rs
crates/bundler/: Cargo.toml
crates/bundler-types/: Cargo.toml
crates/bundler-types/src/: error.rs  lib.rs  user_operation.rs
crates/bundler-types/tests/: user_operation.rs
crates/bundler/src/: config.rs  lib.rs
crates/bundler/src/ethereum/: client.rs  errors.rs  mod.rs  models.rs  types.rs
crates/bundler/src/rpc/: errors.rs  mod.rs  models.rs  server.rs  service.rs  types.rs
crates/bundler/src/rpc/handler/: mod.rs  user_ops.rs
crates/bundler/src/rpc/service/: mod.rs  types.rs  user_ops.rs
crates/bundler/src/workers/: errors.rs  mod.rs  types.rs
crates/bundler/tests/: bundle_worker.rs  eth_client.rs
crates/contracts/: Cargo.toml  build.rs
crates/contracts/src/: lib.rs  user_operation.rs
crates/contracts/src/abi/IAccount.sol/: IAccount.json
crates/contracts/src/abi/IAggregator.sol/: IAggregator.json
crates/contracts/src/abi/IEntryPoint.sol/: IEntryPoint.json
crates/contracts/src/abi/IPaymaster.sol/: IPaymaster.json
crates/contracts/src/abi/IStakeManager.sol/: IStakeManager.json
crates/contracts/src/abi/UserOperation.sol/: UserOperationLib.json
crates/contracts/src/bindings/: IAccount.rs  IEntryPoint.rs  IStakeManager.rs  UserOperationLib.rs
crates/contracts/src/ethereum/: IAggregator.rs  IPaymaster.rs  UserOperationLib.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: errors.rs  lib.rs  types.rs  utils.rs
crates/mempool/tests/: mepool.rs
ext/abi/IAccount.sol/: IAccount.json
ext/abi/IAggregator.sol/: IAggregator.json
ext/abi/IEntryPoint.sol/: IEntryPoint.json
ext/abi/IPaymaster.sol/: IPaymaster.json
ext/abi/IStakeManager.sol/: IStakeManager.json
ext/abi/UserOperation.sol/: UserOperationLib.json
ext/cache/: solidity-files-cache.json
ext/contracts/core/: BaseAccount.sol  EntryPoint.sol  SenderCreator.sol
ext/contracts/interfaces/: IAggregator.sol  IEntryPoint.sol  UserOperation.sol
ext/contracts/samples/: SimpleAccount.sol  VerifyingPaymaster.sol
ext/contracts/samples/bls/: BLSSignatureAggregator.sol
ext/contracts/samples/gnosis/: EIP4337Manager.sol
ext/contracts/test/: MaliciousAccount.sol  TestSignatureAggregator.sol
