[package]
name = "bundler-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = "2.0.3"
thiserror = "1.0.40"
mockall = "0.11.4"
serde = "1.0.163"
serde_json = "1.0.96"
contracts = {path = "../contracts"}