[package]
name = "bundler"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "bundler"
path = "bin/main.rs"

[dependencies]
bundler-types = { path = "../bundler-types" }
contracts = { path = "../contracts" }
mempool = { path = "../mempool" }

actix-web = "4.3.1"
async-trait = "0.1.68"
clap = {version = "4.3.4", features = ["derive"]}
env_logger = "0.10.0"
ethers = "2.0.3"
eyre = "0.6.8"
hex = "0.4.3"
lazy_static = "1.4.0"
log = "0.4.17"
serde = { version = "1.0.160", features = ["derive"] }
thiserror = "1.0.40"
toml = "0.7.4"

[dev-dependencies]
test-context = "0.1.4"
tokio = { version = "1.28.2", features = ["test-util", "macros"] }
