[package]
name = "contracts"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
ethers = "2.0.2"
ethers-solc = "2.0.2"
serde_json = "1.0.95"

[dependencies]
ethers = "2.0.2"
serde_json = "1.0.95"