[package]
name = "mempool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
contracts = {path = "../contracts"}
bundler-types = {path = "../bundler-types"}
thiserror = "1.0.40"
async-trait = "0.1.68"
ethers = "2.0.4"
moka = {version = "0.11.0"}
tokio = {version = "1.28.1", features = ["rt", "macros"]}
serde_json = "1.0.96"
env_logger = "0.10.0"
log = "0.4.17"

[dev-dependencies]
env_logger = "0.10.0"