[package]
name = "mempool"
version = "0.1.0"
edition = "2021"

[dependencies]
bundler-types = { path = "../bundler-types" }
contracts = { path = "../contracts" }

async-trait = "0.1.68"
env_logger = "0.10.0"
ethers = "2.0.4"
log = "0.4.17"
moka = { version = "0.11.0" }
serde_json = "1.0.96"
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["rt", "macros"] }

[dev-dependencies]
env_logger = "0.10.0"
